<resources>
    <string name="app_name">HW4</string>


    <string name="user_name">spot@catchat.com</string>
    <string name="play">Play</string>
    <string name="Play_status">Play Status</string>
    <string name="Purchase_Packs">Purchase Packs</string>
    <string name="Open_Packs">Open Packs</string>
    <string name="Browse_Collection">Browse Collection</string>
    <string name="nav_help">Halp</string>
    <string name="nav_feedback">Giv us feedback</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
